client/styles/output.css
/* ... */
.idc-orange {
  background-color: #ef4e2e; }

.errorClass {
  color: red; }

/*******************************
*       LOGIN SPLASH PAGE      *
********************************/
.splash-icons:before {
  color: #ef4e2e; }

.splash-logo {
  width: 15rem;
  margin: 1rem; }

.splash-header-row {
  max-height: 35rem;
  padding: 0 0 -1.5rem 0;
  margin-bottom: 3rem; }

.splash-header {
  margin-bottom: -5px;
  max-height: 35rem; }

.splash-try-button {
  margin: 3rem 0; }

#splash-img-top, #splash-img-bottom {
  height: 40rem; }

.footer-copyright {
  height: 4rem;
  color: white; }

#toast-container {
  top: auto !important;
  right: auto !important;
  bottom: 7%;
  left: 7%; }

/*******************************
*              HOME            *
********************************/
#add-room-button {
  margin-top: -12px; }

.toggle-buttons {
  margin: 2.5rem auto; }

.add-room-button:before, .view-cal-events-button:before {
  font-size: 2rem;
  color: white; }

.rooms-section-icons:before {
  color: #1565c1;
  font-size: 1.5rem; }

.rooms-section-icons:hover:before {
  color: #3687e2;
  cursor: pointer; }

/* label color */
.input-field label {
  color: #b5b5b5; }

/* label focus color */
.input-field input[type=text]:focus + label {
  color: #b5b5b5; }

/* label underline focus color */
.input-field input[type=text]:focus {
  border-bottom: 1px solid #1565c1;
  box-shadow: 0 1px 0 0 #1565c1; }

/*******************************
*           Room List          *
********************************/
.room-list {
  color: black; }

/*******************************
*       Intermediary Page      *
********************************/
.intermediary-header {
  margin: 3rem 0; }

.intermediary-section section .collection {
  max-height: 25vh; }

section.row {
  margin-bottom: .5rem; }

/*******************************
*        Interview Page        *
********************************/
#interviewPageContainer {
  position: absolute;
  height: 100%;
  width: 100%; }

#elementToShare {
  height: 800px;
  /*width: 800px;*/ }

#promptContainer {
  padding: 10px; }

#codeBoardContainer {
  height: 650px; }

/*#interview-side-panel {
  width: 400px;
}*/
#interviewerControls {
  padding: 15px 15px 0px 15px; }

#recordingIndicator {
  margin-top: 10px; }

#videos-container {
  padding: 5px; }

a.powered-by-firepad {
  display: none; }

/*******************************
*          Whiteboard          *
********************************/
#whiteboard {
  height: 82%; }

#whiteboardOptions {
  width: 100%; }

#whiteboardOptions button, #whiteboardOptions select {
  height: 3rem;
  width: 4em;
  display: inline-block; }

/*******************************
*         CALENDAR             *
********************************/
.rbc-btn {
  color: inherit;
  font: inherit;
  margin: 0; }

button.rbc-btn {
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  cursor: pointer; }

button[disabled].rbc-btn {
  cursor: not-allowed; }

button.rbc-input::-moz-focus-inner {
  border: 0;
  padding: 0; }

.rbc-calendar {
  box-sizing: border-box;
  height: 100%;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-align: stretch;
  align-items: stretch; }

.rbc-calendar *,
.rbc-calendar *:before,
.rbc-calendar *:after {
  box-sizing: inherit; }

.rbc-abs-full,
.rbc-row-bg {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0; }

.rbc-ellipsis,
.rbc-event-label,
.rbc-row-segment .rbc-event-content,
.rbc-show-more {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis; }

.rbc-rtl {
  direction: rtl; }

.rbc-off-range {
  color: #b3b3b3; }

.rbc-header {
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0 3px;
  text-align: center;
  vertical-align: middle;
  font-weight: bold;
  font-size: 90%;
  min-height: 0; }

.rbc-header > a,
.rbc-header > a:active,
.rbc-header > a:visited {
  color: inherit;
  text-decoration: none; }

.rbc-toolbar {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 10px;
  font-size: 16px; }

.rbc-toolbar .rbc-toolbar-label {
  width: 100%;
  padding: 0 10px;
  text-align: center; }

.rbc-toolbar button {
  color: #373a3c;
  display: inline-block;
  margin: 0;
  text-align: center;
  vertical-align: middle;
  background: none;
  background-image: none;
  border: 1px solid #cccccc;
  padding: .375rem 1rem;
  border-radius: 4px;
  line-height: normal; }

.rbc-toolbar button:active,
.rbc-toolbar button.rbc-active {
  background-image: none;
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  background-color: #e6e6e6;
  border-color: #adadad; }

.rbc-toolbar button:active:hover,
.rbc-toolbar button.rbc-active:hover,
.rbc-toolbar button:active:focus,
.rbc-toolbar button.rbc-active:focus {
  color: #373a3c;
  background-color: #d4d4d4;
  border-color: #8c8c8c; }

.rbc-toolbar button:focus {
  color: #373a3c;
  background-color: #e6e6e6;
  border-color: #adadad; }

.rbc-toolbar button:hover {
  color: #373a3c;
  background-color: #e6e6e6;
  border-color: #adadad; }

.rbc-btn-group {
  display: inline-block; }

.rbc-btn-group > button:first-child:not(:last-child) {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0; }

.rbc-btn-group > button:last-child:not(:first-child) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0; }

.rbc-rtl .rbc-btn-group > button:first-child:not(:last-child) {
  border-radius: 4px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0; }

.rbc-rtl .rbc-btn-group > button:last-child:not(:first-child) {
  border-radius: 4px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0; }

.rbc-btn-group > button:not(:first-child):not(:last-child) {
  border-radius: 0; }

.rbc-btn-group button + button {
  margin-left: -1px; }

.rbc-rtl .rbc-btn-group button + button {
  margin-left: 0;
  margin-right: -1px; }
/* ... */

